--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,61 @@
-absl-py==0.9.0
-astor==0.8.1
-cachetools==4.0.0
-certifi==2019.11.28
+absl-py==0.10.0
+astunparse==1.6.3
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-Click==7.0
-Flask==1.1.1
-Flask-WTF==0.14.2
+click==7.1.2
+cycler==0.10.0
+Flask==1.1.2
+Flask-WTF==0.14.3
 gast==0.3.3
-google-auth==1.10.0
+google-auth==1.22.1
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
-grpcio==1.26.0
+google-pasta==0.2.0
+grpcio==1.32.0
 gunicorn==20.0.4
 h5py==2.10.0
-idna==2.8
+idna==2.10
+imutils==0.5.3
 itsdangerous==1.1.0
-Jinja2==2.10.3
-joblib==0.14.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.1
-Markdown==3.1.1
+Jinja2==2.11.2
+joblib==0.17.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+lxml==4.5.2
+Markdown==3.3.1
 MarkupSafe==1.1.1
-numpy==1.17.4
+matplotlib==3.3.2
+ngraph-tensorflow-bridge==0.18.0
+numpy==1.18.5
 oauthlib==3.1.0
-opt-einsum==3.1.0
-protobuf==3.11.1
+opencv-python==4.4.0.46
+OpenTimelineIO==0.13.0
+opt-einsum==3.3.0
+pandas==1.1.3
+Pillow==8.0.1
+protobuf==3.13.0
+pyaaf2==1.4.0
 pyasn1==0.4.8
-pyasn1-modules==0.2.7
-requests==2.22.0
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+PyQt5==5.15.1
+PyQt5-sip==12.8.1
+python-dateutil==2.8.1
+pytz==2020.4
+requests==2.24.0
 requests-oauthlib==1.3.0
-rsa==4.0
-scikit-learn==0.22
-scipy==1.4.1
-six==1.13.0
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.11.0
+six==1.15.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
-urllib3==1.25.7
-Werkzeug==0.16.0
-wincertstore==0.2
-wrapt==1.11.2
-WTForms==2.2.1
+threadpoolctl==2.1.0
+urllib3==1.25.11
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.3
