--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ keras==2.2.4
 keras-applications==1.0.8
 numpy==1.18.5
 ngraph-tensorflow-bridge==0.18.0
-tensorboard==2.3.0
+tensorflow==2.3.0
 Flask==1.1.2
 Pillow==8.0.1
 pandas==1.1.3
