--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ gunicorn==20.0.4
 Werkzeug==1.0.1
 h5py==2.10.0
 flask_bootstrap==3.3.7.1
+click==7.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
