--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-tensorflow==2.2.0
 Flask==1.1.2
 Pillow==8.0.1
 gunicorn==20.0.4
@@ -9,3 +8,5 @@ click==7.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+scikit-learn==0.21.2
+scipy==1.3.1
