--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-tensorflow==2.2.0
 Flask==1.1.2
 Pillow==8.0.1
 gunicorn==20.0.4
 Werkzeug==1.0.1
-h5py==2.10.0
 flask_bootstrap==3.3.7.1
+scikit-learn==0.21.2
+scipy==1.3.1
